Swagger is more verbose, update tests working and passing
